<resources>
    <string name="reports_title"> Ministry Of Health And Social Welfare \n Immunization And Vaccine Development Program \n Health Facility Level Report </string>
    <string name="app_name">TImR</string>
    <string name="login">Ingia</string>
    <string name="username">Jina la mtumiaji</string>
    <string name="password">Nenosiri</string>
    <string name="enter">Ingia</string>
    <string name="online_status">Bila mtandao</string>
    <string name="button_search">Tafuta</string>
    <string name="title_scan">Soma</string>
    <string name="title_check_in">Ingia kwenye foleni</string>
    <string name="title_search_child">Tafuta mtoto</string>
    <string name="title_register_child">Sajili mtoto</string>
    <string name="title_vaccination_queue">Foleni ya chanjo</string>
    <string name="title_view_appointment">Angalia ahadi</string>
    <string name="title_monthly_plan">Mpango wa mwezi</string>
    <string name="title_stock">Stoku</string>
    <string name="title_vaccinate">Chanja</string>
    <string name="title_supplements">Virutubisho</string>
    <string name="title_scan_child">Soma bakodi</string>
    <string name="title_scan_result">Soma matokeo</string>
    <string name="title_view_child">Angalia/Badili taarifa</string>
    <string name="title_child">Mtoto</string>
    <string name="title_administer_vaccines">Toa chanjo</string>
    <string name="description_home">Mwanzo</string>
    <string name="barcode_id">Barcode</string>
    <string name="barcode">Barcode</string>
    <string name="temp_id">Nambari ya muda</string>
    <string name="firstname">Jina la Kwanza</string>
    <string name="surname">Jina la pili</string>
    <string name="mother">Mama</string>
    <string name="mother_firstname">Jina la kwaza la mama</string>
    <string name="mother_surname">Jina la pili la mama</string>
    <string name="name">Jina</string>
    <string name="date_of_birth">Tarehe ya kuwaliwa</string>
    <string name="dob_from">Kuanzia (Tarehe ya kuzaliwa)</string>
    <string name="dob_to">Mpaka (Tarehe ya kuzaliwa)</string>
    <string name="place_of_birth">Mahali pa kuzaliwa</string>
    <string name="village_domicile">Kijiji</string>
    <string name="place_of_birth_prompt">Chagua mahali alipozaliwa</string>
    <string name="village_domicile_prompt">Chagua kijiji</string>
    <string name="health_facility">Kituo</string>
    <string name="status">Hali</string>
    <string name="health_facility_prompt">Chagua jina la kituo</string>
    <string name="status_prompt">Chagua hali ya taarifa</string>
    <string name="title_bar_search_child">Tafuta mtoto</string>
    <string name="choose_date">Chagua tarehe</string>
    <string name="log_in_txt">Ingia kwenye akaunti </string>
    <string name="gender">Jinsia</string>
    <string name="radio_male">M</string>
    <string name="radio_female">K</string>
    <string name="phone">Simu</string>
    <string name="notes">Maelezo</string>
    <string name="search">Tafuta</string>
    <string name="btn_scan">Soma</string>
    <string name="btn_save">Hifadhi</string>
    <string name="or">Au</string>
    <string name="type_barcode_number">Ingiza bakodi namba</string>
    <string name="weight">Uzito</string>
    <string name="supplements">Vimelea</string>
    <string name="input">Ingizo</string>
    <string name="modify_record">Badilisha taarifa</string>
    <string name="vaccinate">Chanjo</string>
    <string name="date">Tarehe</string>
    <string name="back">Rudi</string>
    <string name="child">Mtoto</string>
    <string name="vaccine_dose">Dozi za chanjo</string>
    <string name="schedule">Umri</string>
    <string name="scheduled_date">Tarehe iliyopangwa</string>
    <string name="vaccines">Chanjo</string>
    <string name="age">Umri</string>
    <string name="today_date">Tarehe ya leo</string>
    <string name="not_found">Haijapatikana</string>
    <string name="barcode_does_not_exist">Namba ya bakodi haijapatikana katika mashine hii</string>
    <string name="error_retrieving_child_data">Makosa wakati wa kuvuta taarifa za mtoto</string>
    <string name="empty_phone">Namba ya simu haijajazwa</string>
    <string name="empty_notes">Maelezi hayakujazwa</string>
    <string name="title_immunization_card">Kadi ya chanjo</string>
    <string name="aefi">AEFI</string>
    <string name="dose">Dozi</string>
    <string name="search_again">Tafuta tena</string>
    <string name="there_are_no_children">Hamna mtoto aliyekidhi vigezo vilivyowekwa!</string>
    <string name="btn_register">Sajili Mtoto</string>
    <string name="are_you_sure">You have made some changes, are you sure you want to leave the screen?</string>
    <string name="alert_empty_fields">Tafadhali angalia taarifa zako</string>
    <string name="empty_barcode">Bakodi haiwezi kuachwa wazi</string>
    <string name="empty_firstname">The firstname can not be empty</string>
    <string name="empty_surname">The surname can not be empty</string>
    <string name="change_barcode_scan_when_exists_dialog">Mtoto huyu tayari ananamba ya bakidi. Unataka kumpatia namba nyingine?</string>
    <string name="empty_child_id">Namba ya mtoto haijajazwa</string>
    <string name="empty_names">Jina la pili la mtoto halijajazwa</string>
    <string name="empty_mother_names">Usiache Wazi</string>
    <string name="empty_mother_vvu">Usiache Wazi</string>
    <string name="future_birth_date">Tarehe ya kuzaliwa sio sahihi</string>
    <string name="empty_birthplace">Tarehe ya kuzaliwa haijajazwa</string>
    <string name="empty_village">Chagua kijiji</string>
    <string name="empty_healthfacility">Chagua jina la kituo</string>
    <string name="empty_status">Chagua hali</string>
    <string name="child_change_data_saved_success">Mabadiliko yamehifadhiwa</string>
    <string name="child_change_data_saved_error">Mabadiliko hayakuhifadhiwa</string>
    <string name="btn_clear">Futa</string>
    <string name="vaccine_lot">Bachi ya vaccine</string>
    <string name="vaccination_date">Tarehe ya chanjo</string>
    <string name="done">Maliza</string>
    <string name="reason">Chagua sababu kama haikufanyika</string>
    <string name="modify">Badilisha</string>
    <string name="chk_child_had_aefi">Mtoto alipata AEFI katika ziara hii</string>
    <string name="immunization_card">Kadi ya chanjo</string>
    <string name="txt_vitamina_a">Vit A</string>
    <string name="txt_mebend_a">Mebendazol</string>
    <string name="chk_yes">Ndio</string>
    <string name="please_enter_barcode">Tafadhali ingiza bakodi</string>
    <string name="please_enter_firstname">Ingiza jina la kwanza</string>
    <string name="please_enter_surname">Ingiza jina la pili</string>
    <string name="please_enter_birthdate">Ingiza tarehe ya kuzaliwa</string>
    <string name="please_enter_mother_firstname">Ingiza jina la mama</string>
    <string name="please_enter_mother_surname">Ingiza jina la pili la mama</string>
    <string name="please_select_place_of_birth">Chagua mahali pa kuzaliwa</string>
    <string name="please_select_village_domicile">Ingiza jina la kijiji</string>
    <string name="vaccine_names_quantity">Idadi ya chanjo</string>
    <string name="back_to_queue">Rudi</string>
    <string name="quantity">Dozi</string>
    <string name="child_weight_already_entered">Uzito wa mtoto umeshaingizwa. Unauhakika unataka kuingiza upya?</string>
    <string name="barcode_already_entered">Mtoto huyu tayari ananamba ya bakidi. Unataka kumpatia namba nyingine?</string>
    <string name="supplement_data_saved">Taarifa za ziada zimehifadhiwa</string>
    <string name="weight_analyzer_not_reached">Kiangalia uzito hakifanyi kazi kwa sasa. Samahani kwa usumbufu</string>
    <string name="child_with_this_data_exist">Mtoto mwenye taarifa hizi tayari yupo. Unauhakika unataka kumsajili mtoto huyu?</string>
    <string name="warning">Onyo</string>
    <string name="aefi_date">Tarehe ya AEFI</string>
    <string name="error_ocurred">Kuna makosa yametokea, tafadhali jaribu tena.</string>
    <string name="barcode_not_found_locally">Namba hii haipo katika mashine hii, tafadhali subiri tukiitafuta katika mfumo</string>
    <string name="searching_online">Taarifa zinatafutwa kwenye mfumo</string>
    <string name="birthdate_picker">Kuchagua tarehe</string>
    <string name="button_cancel">Futa ombi</string>
    <string name="child_not_found_locally">Mtoto hajapatikana katika mashine hii. Tafadhali subiri matokeo kutoka kwenye mfumo</string>
    <string name="child_not_saved_locally">Mtoto hakuhifadhiwa katika mashine hii tafadhali subiri tukitafuta katika mfumo</string>
    <string name="data_not_fetched">Taarifa kuhusu mtoto huyu hazikuweza kupatikana. Tafadhali angalia mfumo an jaribu tena</string>
    <string name="error">Makosa</string>
    <string name="too_early_vaccination">Chanjo hii haitakiwi kutolewa sasa, ni mapema kwa umri wa mtoto huyu </string>
    <string name="too_late_vaccination">Chanjo hii haitakiwi kutolewa sasa, imechelewa sana kutolewa</string>
    <string name="network_connectivity">Makosa ya kimfumo yametokea. Samahani kwa usumbufu tafadhali jaribu tena</string>
    <string name="not_saved">Haijahifadhiwa</string>
    <string name="msg_default_status">Weka bakodi ndani ya boksi kwa ajili ya kuisoma</string>
    <string name="assign_barcode_first">Tafadhali mpe mtoto bakodi kwanza</string>
    <string name="same_barcode">Tafadhali chagua bakodi nyingine</string>
    <string name="barcode_assigned">Namba ya bakodi tayari imekwisha kutumika. Tafadhali chagua nyingine</string>
    <string name="select_one_supplement">Tafadhali chagua angalau chanjo moja iliyotolewa</string>
    <string name="select_non_vacc_reason">Tafadhali chagua sababu ya kutotoa chanjo</string>
    <string name="sign_out">Toka</string>
    <string name="barcode_non_registered">Namba ya bakodi haipo tafadhali hakiki au sajili mtoto</string>
    <string name="barcode_not_found_local">Namba ya bakodi haijapatikana katika mashine hii</string>
    <string name="error_comunication_server">Kuna matatizo ya kimfumo. Tafadhali jaribu tena.</string>
    <string name="child_significantly_underweight">Mtoto huyu ana uzito mdogo sana kwa umri wake. Tafadhali hakikisha anapatiwa ushauri nasaha kuhusu lishe.</string>
    <string name="child_weight_too_hight">Mtoto huyu ana uzito mkubwa sana kwa umri wake. Tafadhali hakikisha anapatiwa ushauri nasaha kuhusu lishe.</string>
    <string name="child_weight_too_low">Mtoto huyu ana uzito mdogo kwa umri wake. Tafadhali hakikisha anapatiwa ushauri nasaha kuhusu lishe</string>
    <string name="normal_child_weight">Uzito wa mtoto huyu unawiana na umri wake.</string>
    <string name="weight_not_correct">Onyo! Uzito sio sahihi.</string>
    <string name="weight_analysis">Kichambua uzito</string>
    <string name="weight_registered">Uzito umehifadhiwa.</string>
    <string name="weight_updated">Uzito umesahihishwa.</string>
    <string name="changes_saved">Mabadiliko yamehifadhiwa</string>
    <string name="txt_vaccine_dose">Dozi za chanjo</string>
    <string name="txt_vaccine_lot">Bachi ya vaccine</string>
    <string name="txt_health_center">Kituo cha afya</string>
    <string name="txt_vaccination_date">Tarehe ya chanjo</string>
    <string name="txt_done">Maliza</string>
    <string name="txt_non_vaccination_reason">Sababu ya kutochanja</string>
    <string name="given">Iliyotolewa</string>
    <string name="outreach">Nje ya kituo</string>
    <string name="outreach_details">Sababu za nje ya kituo</string>
    <string name="language">Lugha</string>
    <string name="health_facility_balance">Zilizobaki</string>
    <string name="item">Bidhaa</string>
    <string name="lot_number">Bachi namba</string>
    <string name="expire_date">Tarehe ya kuisha \nmuda wake</string>
    <string name="balance">Usawa</string>
    <string name="stock_adjustments">Stock Adjustments</string>
    <string name="reason_stock">Reason</string>
    <string name="adjustment_qty">Adjustment QTY</string>
</resources>