
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~   ~ Copyright (C)AIRIS Solutions 2015 TIIS App - Tanzania Immunization Information System App
  ~   ~
  ~   ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~   ~    you may not use this file except in compliance with the License.
  ~   ~    You may obtain a copy of the License at
  ~   ~
  ~   ~        http://www.apache.org/licenses/LICENSE-2.0
  ~   ~
  ~   ~    Unless required by applicable law or agreed to in writing, software
  ~   ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~   ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   ~    See the License for the specific language governing permissions and
  ~   ~    limitations under the License.
  ~   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background1" >

    <LinearLayout
            android:id="@+id/titleBarLayout"
            style="@style/TitleBar">

        <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_home"
                android:onClick="onClickHome"
                android:src="@drawable/title_home"/>

        <TextView style="@style/TitleBarText"
                  android:text="@string/health_facility_balance"
                  android:textAlignment="center"
                  android:textSize="@dimen/text_size_large"
                  android:gravity="center"
                  android:textColor="@android:color/black"/>

        <ImageView
            android:id="@+id/home_start_continuous_sync"
            android:layout_width="@dimen/fifty_dp_height"
            android:layout_height="@dimen/forty_dp_height"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_marginEnd="@dimen/ten_dp_height"
            android:layout_marginRight="@dimen/ten_dp_width"
            android:src="@drawable/ic_continuous_sync"
            android:onClick="onClickContinuousSync"/>

        <ImageView
                android:id="@+id/home_wifi_icon"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="#ffff1313"
                android:src="@drawable/wifi32"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/back_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="@dimen/five_dp_padding"
        android:background="@drawable/border_radius_button"
        android:text="@string/back"
        android:textSize="@dimen/text_size_large" />
    <!--Table Header-->
    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:shrinkColumns="*"
                 android:stretchColumns="*"
                 android:paddingTop="20dp"
                 android:id="@+id/view_appointment_table_layout_header">
        <!--Table Header-->
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#73819fd1"
                android:padding="5dp"
                android:id="@+id/view_appointment_table_header">
            <TextView
                    android:text="@string/item"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/txt"/>
            <!--<TextView-->
                    <!--android:text="GTIN"-->
                    <!--android:gravity="center_horizontal"-->
                    <!--android:textColor="@color/txt"-->
                    <!--android:textSize="@dimen/text_size_medium"/>-->
            <TextView
                    android:text="@string/lot_number"
                    android:gravity="center_horizontal"
                    android:textColor="@color/txt"
                    android:textSize="@dimen/text_size_medium"/>
            <TextView
                    android:text="@string/expire_date"
                    android:gravity="center_horizontal"
                    android:textColor="@color/txt"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="left"/>
            <TextView
                android:text="@string/balance"
                android:gravity="center_horizontal"
                android:textColor="@color/txt"
                android:textSize="@dimen/text_size_medium"
                android:layout_gravity="left"/>

            <TextView
                android:text="@string/quantity"
                android:gravity="center_horizontal"
                android:textColor="@color/txt"
                android:textSize="@dimen/text_size_medium"
                android:layout_gravity="left"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/hf_balancee_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/border_radius_button"
        android:ellipsize="middle"
        android:text="@string/btn_save"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>


</ScrollView>