<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~   ~ Copyright (C)AIRIS Solutions 2015 TIIS App - Tanzania Immunization Information System App
  ~   ~
  ~   ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~   ~    you may not use this file except in compliance with the License.
  ~   ~    You may obtain a copy of the License at
  ~   ~
  ~   ~        http://www.apache.org/licenses/LICENSE-2.0
  ~   ~
  ~   ~    Unless required by applicable law or agreed to in writing, software
  ~   ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~   ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   ~    See the License for the specific language governing permissions and
  ~   ~    limitations under the License.
  ~   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/borders_linear_layout">



      <TextView
          android:id="@+id/tv_name"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/name"
          android:layout_gravity="center_vertical"
          android:textColor="@color/Black"
          android:textSize="18sp"
          android:gravity="center"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/Black"/>

    <TextView
        android:id="@+id/tv_mother"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:text="@string/mother"
        android:gravity="center"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/Black"/>

    <TextView
        android:id="@+id/tv_date_of_birth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date_of_birth"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textColor="@color/Black"
        android:gravity="center"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/Black"/>
    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gender"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:background="@color/Black">

        </View>
        <TextView
            android:id="@+id/tv_village"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/village_domicile"
            android:textColor="@color/Black"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/Black"/>
        <TextView
            android:id="@+id/tv_health_facility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/health_facility"
            android:textColor="@color/Black"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"/>



</LinearLayout>